# fastapi-polars

./: Makefile  README.md  alembic.ini  compose.yaml  config.py  locustfile.py  logging-granian.json  main.py  pyproject.toml  run_polars.py  service.py
alembic/versions/: 018faba1ad17_init.py  09302e99fc71_init.py  3d8cfce720df_add_books_index.py  52223f807996_init.py  c625e5ce34b7_add_new_columns_to_books_index.py  cf35258f1403_add_parquet_index_table.py
api/: books.py  frozen.py
db/: Dockerfile  create.sql
models/: __init__.py  base.py  books.py  parquet.py
schemas/: polars.py  pydantic.py
services/: database.py  files.py  index.py  s3.py  utlis.py
templates/: home.html
tests/: df_exporter.py
