[project]
name = "fastapi-polars"
version = "0.2.0"

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "fsspec>=2025.2.0",
    "granian>=2.0.1",
    "httptools>=0.6.4",
    "ipython>=8.31.0",
    "locust>=2.32.5",
    "marimo>=0.11.5",
    "polars>=1.24.0",
    "polyfactory>=2.19.0",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.3",
    "s3fs>=2025.2.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "whenever>=0.7.2",
]
