[project]
name = "fastapi-polars"
version = "0.3.0"

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-manager>=1.5.0",
    "adbc-driver-postgresql>=1.5.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "fsspec>=2025.3.2",
    "granian>=2.2.1",
    "httptools>=0.6.4",
    "ipython>=9.0.2",
    "locust>=2.33.2",
    "marimo>=0.12.4",
    "polars>=1.26.0",
    "polyfactory>=2.20.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.6",
    "pyarrow>=19.0.1",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.4",
    "s3fs>=2025.3.2",
    "sqlacodegen>=3.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "whenever>=0.7.3",
]
